deployment/02-server-metadatamanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: server-metadatamanager
    app: metadatamanager
    metadatamanager.component: server-metadatamanager
  name: server-metadatamanager
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: server-metadatamanager
