deployment/08-pg-metadatamanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pg-metadatamanager
    app: metadatamanager
    metadatamanager.component: pg-metadatamanager
  name: pg-metadatamanager
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: pg-metadatamanager
