deployment/10-swagger-metadatamanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: swagger-metadatamanager
    app: metadatamanager
    metadatamanager.component: swagger-metadatamanager
  name: swagger-metadatamanager
spec:
  ports:
  - name: "8095"
    port: 8095
    targetPort: 8095
  selector:
    io.kompose.service: swagger-metadatamanager
