deployment/11-swagger-metadatamanager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    io.kompose.service: swagger-metadatamanager
    app: metadatamanager
    metadatamanager.component: swagger-metadatamanager
  name: metadatamanager
spec:
  host: metadata-api-docs$URL
  port:
    targetPort: '8095'
  to:
    kind: Service
    name: swagger-metadatamanager
    weight: 100
  wildcardPolicy: None
